--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -1,9 +1,9 @@
 body {
   margin: 0;
 
-  color: var(--main-text-color);
-  background-color: var(--background-color);
-  font-family: 'Roboto', sans-serif;
+  color: $main-text-color;
+  background-color: $background-color;
+  font-family: $primary-font;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
