--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -5,13 +5,20 @@
   height: 100vh;
   width: 100vw;
   perspective: 1600px;
+  z-index: 5;
 
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: visible;
+  transition: $transition-backdrop;
 }
 .backdrop.is-hidden {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
+
+  .modal {
+    transform: translate(-50%, -50%) scale(0.5) rotateY(180deg);
+  }
 }
