--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,18 +13,5 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.5) rotateY(180deg);
-}
-
-.modal-text {
-  margin-bottom: 12px;
-
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  color: $secondary-heading-color;
+  transition: $transition-transform;
 }
