--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,21 +1,21 @@
 .advantages {
   display: flex;
   flex-wrap: wrap;
-  .item {
-    width: 270px;
-  }
-  .item:not(:last-child) {
-    margin-right: 30px;
-  }
 }
 
-.advantages-thumb {
+.advantages__item {
+  width: 270px;
+}
+.advantages__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.advantages__thumb {
+  @extend %flex-centered;
+
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   background-color: $team-background;
   border-radius: 4px;
