--- a/sass/layout/_examples.scss
+++ b/sass/layout/_examples.scss
@@ -1,13 +1,21 @@
 .examples {
   padding-top: 0px;
 }
-.example-photos-thumb {
+
+.examples__list {
+  display: flex;
+}
+
+.examples__thumb {
   position: relative;
 
   width: 370px;
   height: 294px;
 }
-.example-photos-description {
+.examples__thumb:not(:last-child) {
+  margin-right: 30px;
+}
+.examples__description {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -21,10 +29,4 @@
   background-color: rgba(47, 48, 58, 0.8);
   text-transform: uppercase;
   color: $primary-heading-color;
-}
-.example-photos-list {
-  display: flex;
-  li:not(:last-child) {
-    margin-right: 30px;
-  }
 }
