--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,25 +1,41 @@
-.projects-list {
+.projects {
   display: flex;
   flex-wrap: wrap;
 }
-.projects-list-item {
+.projects__sample {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
-.projects-list-thumb {
-  position: relative;
-  overflow: hidden;
-}
-.projects-list-link {
+
+.sample__link {
   display: block;
 
   text-decoration: none;
   color: inherit;
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: $transition-shadow;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
-.projects-list-overlay {
+
+.sample__thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.sample__overlay {
   position: absolute;
   transform: translateY(100%);
 
@@ -35,24 +51,15 @@
   color: $primary-heading-color;
   background-color: rgba(33, 150, 243, 0.9);
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: $transition-transform;
+
+  .sample__link:hover &,
+  .sample__link:focus & {
+    transform: translateY(-100%);
+  }
 }
-.projects-list-link:hover,
-.projects-list-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.projects-list-link:hover .projects-list-overlay,
-.projects-list-link:focus .projects-list-overlay {
-  transform: translateY(-100%);
-}
-.projects-list-item:nth-child(3n) {
-  margin-right: 0px;
-}
-.projects-list-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
-.projects-list-description {
+
+.sample__description {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
@@ -60,8 +67,6 @@
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
-}
-.projects-list-description p {
   font-size: 16px;
   line-height: 1.87;
 }
