--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -1,32 +1,4 @@
-.site-header {
+.header {
   background-color: $background-color;
   border-bottom: 1px solid #ececec;
-}
-
-.header-link {
-  display: inline-flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  position: relative;
-
-  color: $link-color;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-link.current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-
-  width: 100%;
-  height: 4px;
-  background-color: $logo-color;
-  border-radius: 2px;
 }
