--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,3 +13,21 @@ $footer-background: #2f303a;
 $team-background: #f5f4fa;
 $accent-color: #2196f3;
 $icons-color: #afb1b8;
+
+$primary-font: 'Roboto', sans-serif;
+$secondary-font: Raleway, sans-serif;
+
+$transition-color: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-bg-color: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-shadow: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-icon: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-border: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-transform: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-social: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-clients: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-filter: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$transition-backdrop: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
